--- a/templates/cards/commonItem.hbs
+++ b/templates/cards/commonItem.hbs
@@ -3,12 +3,15 @@
   data-document-id="{{coalesce docId this.id _id}}">
   <h4 class="flexrow -gap-sm title">
     {{#if inSheet}}
-      <a data-action="item-chat" title="{{localize "l5r4.ui.common.toChat"}}">{{name}}</a>
+      <a data-action="item-chat" title="{{name}}">{{name}}</a>
     {{else}}
       {{name}}
     {{/if}}
   </h4>
   {{#if inSheet}}
+    <span></span>
+    <span></span>
+    <span></span>
     {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
     {{#if system.description}}
       <div class="expanded-text">
