--- a/templates/cards/family.hbs
+++ b/templates/cards/family.hbs
@@ -3,7 +3,7 @@
   data-document-id="{{coalesce docId this.id _id}}">
   <h4 class="flexrow -gap-sm title">
     {{#if inSheet}}
-      <a data-action="item-chat" title="{{localize "l5r4.ui.common.toChat"}}">{{name}}</a>
+      <a data-action="item-chat" title="{{name}}">{{name}}</a>
     {{else}}
       {{name}}
     {{/if}}
