--- a/less/chat.less
+++ b/less/chat.less
@@ -15,4 +15,16 @@
       margin: 0;
     }
   }
+
+  .l5r4-roll {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+  }
+    
+  
+
+  .l5r4-damage-button {
+    width: 100%;
+  }
 }
