--- a/less/l5r4.less
+++ b/less/l5r4.less
@@ -10,6 +10,7 @@
 @import "./actor/ranks.less";
 @import "./actor/stats.less";
 @import "./actor/wound.less";
+@import "./actor/xp.less";
 
 // Sheets Item
 @import "./item-sheet.less";
