--- a/templates/actor/_partials/_advantages.hbs
+++ b/templates/actor/_partials/_advantages.hbs
@@ -11,7 +11,7 @@
         <a class="item-sort-by" data-sortby="name">{{localize "l5r4.ui.common.name"}}</a>
         <a class="item-sort-by" data-sortby="type">{{localize "l5r4.ui.common.type"}}</a>
         <a class="item-sort-by" data-sortby="cost">{{localize "l5r4.equipment.general.cost"}}</a>
-        <a class="item-sort-by" data-sortby="item">{{localize "TYPES.Item.item"}} {{localize "l5r4.ui.common.type"}}</a>
+        <a class="item-sort-by" data-sortby="item">{{localize "l5r4.ui.common.type"}}</a>
         <span></span>
       </div>
     </section>
