--- a/templates/item/disadvantage.hbs
+++ b/templates/item/disadvantage.hbs
@@ -10,7 +10,7 @@
   <div class="form-group">
     <label>{{localize "l5r4.equipment.general.cost"}}</label>
     <div class="form-fields">
-      <input name="system.cost" type="number" max="0" value="{{system.cost}}" data-type="Number" />
+      <input name="system.cost" type="number" value="{{system.cost}}" data-type="Number" />
     </div>
   </div>
 </section>
