--- a/templates/cards/advantage-disadvantage.hbs
+++ b/templates/cards/advantage-disadvantage.hbs
@@ -11,7 +11,7 @@
   {{#if inSheet}}
     <div>{{localize (concat "l5r4.character.advantages." system.type)}}</div>
     <div>{{system.cost}}</div>
-    <div>{{type}}</div>
+    <div>{{localize (concat "TYPES.Item." type)}}</div>
     {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
     {{#if (or system.description system.specialRules)}}
       <div class="expanded-text">
