--- a/templates/item/skill.hbs
+++ b/templates/item/skill.hbs
@@ -11,6 +11,20 @@
       <input name="system.school" type="checkbox" {{checked system.school}} data-type="Boolean" />
     </div>
   </div>
+  {{#if system.school}}
+  <div class="form-group">
+    <label>{{localize "l5r4.ui.common.free"}} {{localize "l5r4.character.skills.properties.rank"}}</label>
+    <div class="form-fields">
+      <input name="system.freeRanks" type="number" value="{{system.freeRanks}}" min="0" data-type="Number" />
+    </div>
+  </div>
+  <div class="form-group">
+    <label>{{localize "l5r4.ui.common.free"}} {{localize "l5r4.character.skills.properties.emphasis"}}</label>
+    <div class="form-fields">
+      <input name="system.freeEmphasis" type="number" value="{{system.freeEmphasis}}" min="0" data-type="Number" />
+    </div>
+  </div>
+  {{/if}}
   <div class="form-group">
     <label>{{localize "l5r4.character.skills.properties.emphasis"}}</label>
     <div class="form-fields">
@@ -76,4 +90,4 @@
     </div>
   </div>
 </section>
-{{> (concat "systems/" SYS_ID "/templates/item/partials/_rules-summary.hbs") }}
+{{> (concat "systems/" SYS_ID "/templates/item/_partials/_rules-summary.hbs") }}
