--- a/less/actor/item-list.less
+++ b/less/actor/item-list.less
@@ -57,7 +57,7 @@
 
     &.-xp-spent {
       .item {
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 80px 120px;
       }
     }
 
