--- a/templates/actor/_partials/_stats.hbs
+++ b/templates/actor/_partials/_stats.hbs
@@ -1,4 +1,4 @@
-<section class="flexcol stats">
+<section class="flexcol -gap-sm stats">
   <div class="flexcol actor-header">
     <div class="flexrow -gap-lg pc-info">
       <div class="flexcol flex1">
