--- a/templates/actor/_partials/_advantages.hbs
+++ b/templates/actor/_partials/_advantages.hbs
@@ -1,9 +1,10 @@
 <section class="flexcol -gap-sm">
   <div class="flexrow -gap-sm section-title">
     <h4 class="title">{{localize "l5r4.ui.sheets.advantages"}}/{{localize "l5r4.ui.sheets.disadvantages"}}</h4>
-    <a class="button icon" data-action="item-create" data-type="advantage" title="{{localize "l5r4.ui.sheets.addAdv/Dis"}}">
+    <a class="button inline-control icon" data-action="item-create" data-type="advantage" title="{{localize "l5r4.ui.sheets.addAdv/Dis"}}">
       <i class="fas fa-plus"></i>
     </a>
+    {{> "systems/l5r4/templates/actor/_partials/_expand.hbs"}}
   </div>
   {{#if advDisList.length}}
     <section class="item-list -advantages -header" data-scope="advDis">
