--- a/templates/actor/_partials/_skills.hbs
+++ b/templates/actor/_partials/_skills.hbs
@@ -1,9 +1,10 @@
 <section class="flexcol -gap-sm">
   <div class="flexrow -gap-sm section-title">
     <h4 class="title">{{localize "l5r4.ui.sheets.skills"}}</h4>
-    <a class="button icon" data-action="item-create" data-type="skill" title="{{localize "l5r4.ui.sheets.addSkill"}}">
+    <a class="button inline-control icon" data-action="item-create" data-type="skill" title="{{localize "l5r4.ui.sheets.addSkill"}}">
       <i class="fas fa-plus"></i>
     </a>
+    {{> "systems/l5r4/templates/actor/_partials/_expand.hbs"}}
   </div>
   {{#if skills.length}}
     <section class="item-list -skill -header" data-scope="skills">
