--- a/templates/actor/_partials/_initiative.hbs
+++ b/templates/actor/_partials/_initiative.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="grid">
     {{#if (eq actor.type "pc")}}
-      <span>{{localize "l5r4.character.ranks.insightRank"}}/{{localize "l5r4.mechanics.traits.ref"}}</span>
+      <span>{{localize "l5r4.character.ranks.insightRank"}}/{{localize "l5r4.ui.mechanics.traits.ref"}}</span>
       <div class="flexrow"><span>{{system.insight.rank}}+{{system.traits.ref}}</span></div>
       <span>{{localize "l5r4.ui.common.roll"}}/{{localize "l5r4.ui.common.keep"}} {{localize "l5r4.ui.common.bonus"}}</span>
       <div class="flexrow -gap-xs">
