--- a/templates/actor/_partials/_skills-section.hbs
+++ b/templates/actor/_partials/_skills-section.hbs
@@ -10,7 +10,7 @@
     <section class="item-list -skill -header" data-scope="skills">
       <div class="item">
         <a class="item-sort-by" data-sortby="name">{{localize "l5r4.ui.common.name"}}</a>
-        <a class="item-sort-by" data-sortby="rank">{{localize "l5r4.character.skills.properties.rank"}}</a>
+        <a class="item-sort-by" data-sortby="rank">{{localize "l5r4.ui.common.rank"}}</a>
         <a class="item-sort-by" data-sortby="trait">{{localize "l5r4.character.skills.properties.trait"}}</a>
         <a class="item-sort-by" data-sortby="roll">{{localize "l5r4.ui.common.roll"}}</a>
         <a class="item-sort-by" data-sortby="emphasis">{{localize "l5r4.character.skills.properties.emphasis"}}</a>
