--- a/templates/cards/spell.hbs
+++ b/templates/cards/spell.hbs
@@ -11,7 +11,7 @@
     {{/if}}
   </h4>
   {{#if inSheet}}
-    <div class="spell-ring">{{localize (concat "l5r4.mechanics.rings." system.ring)}}</div>
+    <div class="spell-ring">{{localize (concat "l5r4.ui.mechanics.rings." system.ring)}}</div>
     <div class="spell-mastery">{{system.mastery}}</div>
     <div class="spell-range">{{system.range}}</div>
     <div class="spell-aoe">{{system.aoe}}</div>
@@ -29,7 +29,7 @@
     {{/if}}
   {{/if}}
   {{#unless inSheet}}
-    <p><strong>{{localize "l5r4.ui.common.ring"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.ring)}}</p>
+    <p><strong>{{localize "l5r4.ui.common.ring"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.ring)}}</p>
     <p><strong>{{localize "l5r4.ui.common.mastery"}}:</strong> {{system.mastery}}</p>
     <p><strong>{{localize "l5r4.magic.spells.range"}}:</strong> {{system.range}}</p>
     <p><strong>{{localize "l5r4.magic.spells.aoe"}}:</strong> {{system.aoe}}</p>
