--- a/templates/dialogs/create-advantage-dialog.hbs
+++ b/templates/dialogs/create-advantage-dialog.hbs
@@ -1,7 +1,7 @@
 <form>
   <div class="form-group">
     <label>{{localize "l5r4.ui.common.name"}}</label>
-    <input type="text" name="itemName" placeholder="{{localize 'l5r4.ui.sheets.addAdv/Dis'}}">
+    <input type="text" name="itemName" placeholder="{{localize 'l5r4.ui.sheets.addAdvDis'}}">
   </div>
   <div class="form-group">
     <label>{{localize "l5r4.ui.common.type"}}</label>
