--- a/templates/actor/_partials/_stats-npc.hbs
+++ b/templates/actor/_partials/_stats-npc.hbs
@@ -11,97 +11,97 @@
   </div>
   <div class="traits-rings">
     <!-- Earth ring -->
-    <h4 class="ring-name ring-name-earth">{{localize "l5r4.mechanics.rings.earth"}}</h4>
+    <h4 class="ring-name ring-name-earth">{{localize "l5r4.ui.mechanics.rings.earth"}}</h4>
     <h4 class="ring-rank ring-rank-earth">{{system.rings.earth}}</h4>
     <div class="earth-ring">
-      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.earth}}" data-ring-name="{{localize "l5r4.mechanics.rings.earth"}}" data-system-ring="earth">
-        <img src="{{iconPath 'earth.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="earth-ring-img" />
+      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.earth}}" data-ring-name="{{localize "l5r4.ui.mechanics.rings.earth"}}" data-system-ring="earth">
+        <img src="{{iconPath 'earth.png'}}" title="{{localize "l5r4.ui.mechanics.rolls.ringRoll"}}" class="earth-ring-img" />
       </a>
     </div>
     <div class="trait trait-stamina">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.sta}}" data-trait-name="{{localize "l5r4.mechanics.traits.sta"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.sta"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.sta}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.sta"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.sta"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="sta" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.sta}}</a>
     </div>
     <div class="trait trait-willpower">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.wil}}" data-trait-name="{{localize "l5r4.mechanics.traits.wil"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.wil"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.wil}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.wil"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.wil"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="wil" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.wil}}</a>
     </div>
 
     <!-- Air ring -->
-    <h4 class="ring-name ring-name-air">{{localize "l5r4.mechanics.rings.air"}}</h4>
+    <h4 class="ring-name ring-name-air">{{localize "l5r4.ui.mechanics.rings.air"}}</h4>
     <h4 class="ring-rank ring-rank-air">{{system.rings.air}}</h4>
     <div class="air-ring">
-      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.air}}" data-ring-name="{{localize "l5r4.mechanics.rings.air"}}" data-system-ring="air">
-        <img src="{{iconPath 'air.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="air-ring-img" />
+      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.air}}" data-ring-name="{{localize "l5r4.ui.mechanics.rings.air"}}" data-system-ring="air">
+        <img src="{{iconPath 'air.png'}}" title="{{localize "l5r4.ui.mechanics.rolls.ringRoll"}}" class="air-ring-img" />
       </a>
     </div>
     <div class="trait trait-reflex">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.ref}}" data-trait-name="{{localize "l5r4.mechanics.traits.ref"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.ref"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.ref}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.ref"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.ref"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="ref" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.ref}}</a>
     </div>
     <div class="trait trait-awarness">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.awa}}" data-trait-name="{{localize "l5r4.mechanics.traits.awa"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.awa"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.awa}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.awa"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.awa"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="awa" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.awa}}</a>
     </div>
 
     <!-- Water ring -->
-    <h4 class="ring-name ring-name-water">{{localize "l5r4.mechanics.rings.water"}}</h4>
+    <h4 class="ring-name ring-name-water">{{localize "l5r4.ui.mechanics.rings.water"}}</h4>
     <h4 class="ring-rank ring-rank-water">{{system.rings.water}}</h4>
     <div class="water-ring">
-      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.water}}" data-ring-name="{{localize "l5r4.mechanics.rings.water"}}" data-system-ring="water">
-        <img src="{{iconPath 'water.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="water-ring-img" />
+      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.water}}" data-ring-name="{{localize "l5r4.ui.mechanics.rings.water"}}" data-system-ring="water">
+        <img src="{{iconPath 'water.png'}}" title="{{localize "l5r4.ui.mechanics.rolls.ringRoll"}}" class="water-ring-img" />
       </a>
     </div>
     <div class="trait trait-strength">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.str}}" data-trait-name="{{localize "l5r4.mechanics.traits.str"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.str"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.str}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.str"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.str"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="str" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.str}}</a>
     </div>
     <div class="trait trait-perception">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.per}}" data-trait-name="{{localize "l5r4.mechanics.traits.per"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.per"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.per}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.per"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.per"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="per" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.per}}</a>
     </div>
 
     <!-- Fire ring -->
-    <h4 class="ring-name ring-name-fire">{{localize "l5r4.mechanics.rings.fire"}}</h4>
+    <h4 class="ring-name ring-name-fire">{{localize "l5r4.ui.mechanics.rings.fire"}}</h4>
     <h4 class="ring-rank ring-rank-fire">{{system.rings.fire}}</h4>
     <div class="fire-ring">
       <div>
-        <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.fire}}" data-ring-name="{{localize "l5r4.mechanics.rings.fire"}}" data-system-ring="fire">
-          <img src="{{iconPath 'fire.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="fire-ring-img" />
+        <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.fire}}" data-ring-name="{{localize "l5r4.ui.mechanics.rings.fire"}}" data-system-ring="fire">
+          <img src="{{iconPath 'fire.png'}}" title="{{localize "l5r4.ui.mechanics.rolls.ringRoll"}}" class="fire-ring-img" />
         </a>
       </div>
     </div>
     <div class="trait trait-agility">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.agi}}" data-trait-name="{{localize "l5r4.mechanics.traits.agi"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.agi"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.agi}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.agi"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.agi"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="agi" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.agi}}</a>
     </div>
     <div class="trait trait-intelligence">
-      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.int}}" data-trait-name="{{localize "l5r4.mechanics.traits.int"}}">
-        <p title="{{localize "l5r4.ui.rolls.traitRoll"}}">{{localize "l5r4.mechanics.traits.int"}}</p>
+      <a class="trait-roll" data-action="roll-trait" data-trait-rank="{{system.traits.int}}" data-trait-name="{{localize "l5r4.ui.mechanics.traits.int"}}">
+        <p title="{{localize "l5r4.ui.mechanics.rolls.traitRoll"}}">{{localize "l5r4.ui.mechanics.traits.int"}}</p>
       </a>
       <a class="trait-rank" data-action="trait-rank" data-trait="int" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{@root.traitsEff.int}}</a>
     </div>
 
     <!-- Void ring -->
-    <h4 class="ring-name ring-name-void">{{localize "l5r4.mechanics.rings.void"}}</h4>
+    <h4 class="ring-name ring-name-void">{{localize "l5r4.ui.mechanics.rings.void"}}</h4>
     <a class="ring-rank ring-rank-void" data-action="ring-rank-void" data-ring="void" role="button" title="{{localize "l5r4.ui.hints.leftClickPlusRightClickMinus"}}">{{system.rings.void.rank}}</a>
     <div class="void-ring">
-      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.void.rank}}" data-ring-name="{{localize "l5r4.mechanics.rings.void"}}" data-system-ring="void">
-        <img src="{{iconPath 'void.png'}}" title="{{localize "l5r4.ui.rolls.ringRoll"}}" class="void-ring-img" />
+      <a class="ring-roll" data-action="roll-ring" data-ring-rank="{{system.rings.void.rank}}" data-ring-name="{{localize "l5r4.ui.mechanics.rings.void"}}" data-system-ring="void">
+        <img src="{{iconPath 'void.png'}}" title="{{localize "l5r4.ui.mechanics.rolls.ringRoll"}}" class="void-ring-img" />
       </a>
     </div>
     {{#if @root.showNpcVoidPoints}}
@@ -118,19 +118,19 @@
           <span class="void-dot" data-idx="8"></span>
           <span class="void-dot" data-idx="9"></span>
         </div>
-        <p class="void-points-name">{{localize "l5r4.mechanics.rings.voidPoints"}}</p>
+        <p class="void-points-name">{{localize "l5r4.ui.mechanics.rings.voidPoints"}}</p>
       </div>
     {{/if}}
   </div>
 
   <section class="flexcol -gap-sm">
     <div class="flexrow -gap-sm section-title">
-      <h4 class="title">{{localize "l5r4.mechanics.combat.attack"}} & {{localize "l5r4.ui.common.damage"}}</h4>
+      <h4 class="title">{{localize "l5r4.ui.mechanics.combat.attack"}} & {{localize "l5r4.ui.common.damage"}}</h4>
     </div>
     <section class="item-list -attacks -header">
       <div class="item">
         <span>{{localize "l5r4.ui.common.name"}}</span>
-        <span>{{localize "l5r4.mechanics.combat.attack"}}</span>
+        <span>{{localize "l5r4.ui.mechanics.combat.attack"}}</span>
         <span>{{localize "l5r4.ui.common.damage"}}</span>
         <span></span>
         <span></span>
@@ -138,15 +138,15 @@
     </section>
     <section class="item-list -attacks">
       <div class="item -attacks -expandable">
-        <h4 class="flexrow -gap-sm title">{{localize "l5r4.mechanics.combat.attack"}} 1</h4>
+        <h4 class="flexrow -gap-sm title">{{localize "l5r4.ui.mechanics.combat.attack"}} 1</h4>
         <div>
           <a class="button"
              data-action="roll-attack"
              data-roll="{{system.attack1.roll}}"
              data-keep="{{system.attack1.keep}}"
              data-description="{{system.attack1.type}}"
-             data-label="{{localize "l5r4.mechanics.combat.attack"}} 1"
-             title="{{localize "l5r4.mechanics.combat.attack"}}">
+             data-label="{{localize "l5r4.ui.mechanics.combat.attack"}} 1"
+             title="{{localize "l5r4.ui.mechanics.combat.attack"}}">
             {{system.attack1.roll}}k{{system.attack1.keep}}
           </a>
         </div>
@@ -157,14 +157,14 @@
              data-keep="{{system.damage1.keep}}"
              data-description="{{system.damage1.type}}"
              data-label="{{localize "l5r4.ui.common.damage"}} 1"
-             title="{{localize "l5r4.mechanics.rolls.damageRoll"}}">
+             title="{{localize "l5r4.ui.mechanics.rolls.damageRoll"}}">
             {{system.damage1.roll}}k{{system.damage1.keep}}
           </a>
         </div>
         <span></span>
         {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
         <div class="expanded-text -gap-sm -npc">
-          <h5>{{localize "l5r4.mechanics.combat.attack"}} 1</h5>
+          <h5>{{localize "l5r4.ui.mechanics.combat.attack"}} 1</h5>
           <div class="flexrow -gap-xs">
             <input name="system.attack1.roll" type="number" value="{{system.attack1.roll}}" data-type="Number" />
             <span class="flex0">k</span>
@@ -189,15 +189,15 @@
         </div>
       </div>
       <div class="item -attacks -expandable">
-        <h4 class="flexrow -gap-sm title">{{localize "l5r4.mechanics.combat.attack"}} 2</h4>
+        <h4 class="flexrow -gap-sm title">{{localize "l5r4.ui.mechanics.combat.attack"}} 2</h4>
         <div>
           <a class="button"
              data-action="roll-attack"
              data-roll="{{system.attack2.roll}}"
              data-keep="{{system.attack2.keep}}"
              data-description="{{system.attack2.type}}"
-             data-label="{{localize "l5r4.mechanics.combat.attack"}} 2"
-             title="{{localize "l5r4.mechanics.combat.attack"}}">
+             data-label="{{localize "l5r4.ui.mechanics.combat.attack"}} 2"
+             title="{{localize "l5r4.ui.mechanics.combat.attack"}}">
             {{system.attack2.roll}}k{{system.attack2.keep}}
           </a>
         </div>
@@ -208,14 +208,14 @@
              data-keep="{{system.damage2.keep}}"
              data-description="{{system.damage2.type}}"
              data-label="{{localize "l5r4.ui.common.damage"}} 2"
-             title="{{localize "l5r4.mechanics.rolls.damageRoll"}}">
+             title="{{localize "l5r4.ui.mechanics.rolls.damageRoll"}}">
             {{system.damage2.roll}}k{{system.damage2.keep}}
           </a>
         </div>
         <span></span>
         {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
         <div class="expanded-text -gap-sm -npc">
-          <h5>{{localize "l5r4.mechanics.combat.attack"}} 2</h54>
+          <h5>{{localize "l5r4.ui.mechanics.combat.attack"}} 2</h5>
           <div class="flexrow -gap-xs">
             <input name="system.attack2.roll" type="number" value="{{system.attack2.roll}}" data-type="Number" />
             <span class="flex0">k</span>
@@ -242,7 +242,7 @@
     </section>
   </section>
 
-  {{> "systems/l5r4/templates/actor/_partials/_skills.hbs"}}
+  {{> "systems/l5r4/templates/actor/_partials/_skills-section.hbs"}}
 
   <section class="flexcol -gap-sm">
     <div class="flexrow -gap-sm section-title">
