--- a/templates/actor/_partials/_wounds.hbs
+++ b/templates/actor/_partials/_wounds.hbs
@@ -1,31 +1,31 @@
 <section class="wounds">
   <div class="flexrow -gap-sm section-title">
-    <h4 class="title -compact">{{localize "l5r4.mechanics.wounds.wounds"}}</h4>
+    <h4 class="title -compact">{{localize "l5r4.ui.mechanics.wounds.wounds"}}</h4>
   </div>
   <div class="grid">
-    <span>{{localize "l5r4.mechanics.wounds.woundsSuffered"}}</span>
+    <span>{{localize "l5r4.ui.mechanics.wounds.woundsSuffered"}}</span>
     <div class="flexrow"><input type="number" name="system.suffered" value="{{system.suffered}}" data-type="Number" /></div>
     {{#if (eq actor.type "npc")}}
-      <span>{{localize "l5r4.mechanics.wounds.maxWounds"}}</span>
+      <span>{{localize "l5r4.ui.mechanics.wounds.maxWounds"}}</span>
       <div class="flexrow"><input type="number" name="system.wounds.max" placeholder="" value="{{#if (gt system.wounds.max 0)}}{{system.wounds.max}}{{/if}}" data-type="Number" /></div>
-      <span>{{localize "l5r4.ui.sheets.nrWoundLvls"}}</span>
+      <span>{{localize "l5r4.ui.sheets.woundLevels"}}</span>
       <div class="flexrow">
         <select name="system.nrWoundLvls" data-type="Number">
           {{selectOptions config.npcNumberWoundLvls selected=system.nrWoundLvls}}
         </select>
       </div>
     {{/if}}
-    <span>{{localize "l5r4.mechanics.wounds.wounds"}} {{localize "l5r4.ui.common.mod"}}</span>
+    <span>{{localize "l5r4.ui.mechanics.wounds.wounds"}} {{localize "l5r4.ui.common.mod"}}</span>
     <div class="flexrow"><input type="number" name="system.woundsMod" value="{{system.woundsMod}}" data-type="Number" /></div>
-    <span>{{localize "l5r4.mechanics.wounds.wounds"}} {{localize "l5r4.mechanics.combat.multiplier"}}</span>
+    <span>{{localize "l5r4.ui.mechanics.wounds.wounds"}} {{localize "l5r4.ui.mechanics.combat.multiplier"}}</span>
     <div class="flexrow"><input type="number" name="system.woundsMultiplier" value="{{system.woundsMultiplier}}" data-type="Number" /></div>
     <div class="wound-grid">
-      <span>{{localize "l5r4.mechanics.wounds.woundLevel"}}</span>
-      <span>{{localize "l5r4.mechanics.wounds.penalty"}}</span>
+      <span>{{localize "l5r4.ui.mechanics.wounds.woundLevel"}}</span>
+      <span>{{localize "l5r4.ui.mechanics.wounds.penalty"}}</span>
       <span>{{localize "l5r4.ui.common.total"}}</span>
       <span>{{localize "l5r4.ui.common.current"}}</span>
       {{#each system.woundLevels as |lvl name|}}
-        <div>{{localize (concat "l5r4.mechanics.wounds." (name))}}</div>
+        <div>{{localize (concat "l5r4.ui.mechanics.wounds." (name))}}</div>
         <div>{{penaltyEff}}</div>
         <div>{{value}}</div>
         <div>
@@ -40,10 +40,10 @@
 {{#if (eq actor.type "pc")}}
   <section class="wounds">
     <div class="flexrow -gap-sm section-title">
-      <h4 class="title -compact">{{localize "l5r4.mechanics.wounds.woundHealRate"}}</h4>
+      <h4 class="title -compact">{{localize "l5r4.ui.mechanics.wounds.woundHealRate"}}</h4>
     </div>
     <div class="grid">
-      <span>{{localize "l5r4.mechanics.traits.sta"}} x 2 + {{localize "l5r4.character.ranks.insightRank"}}</span>
+      <span>{{localize "l5r4.ui.mechanics.traits.sta"}} {{localize "l5r4.ui.mechanics.wounds.healRateFormula"}} {{localize "l5r4.character.ranks.insightRank"}}</span>
       <div class="flexrow"><span>{{math (math system.traits.sta "*" 2) "+" system.insight.rank}}</span></div>
       <span>{{localize "l5r4.ui.common.mod"}}</span>
       <div class="flexrow"><input type="text" name="system.wounds.mod" value="{{system.wounds.mod}}" data-type="Number" /></div>
