--- a/templates/apps/xp-manager.hbs
+++ b/templates/apps/xp-manager.hbs
@@ -34,7 +34,7 @@
     <div class="form-group">
       <div class="form-fields">
         <button type="button" data-action="xp-add-confirm">
-          <i class="fas fa-plus"></i> {{localize "l5r4.ui.common.apply"}}
+          <i class="fas fa-plus"></i> {{localize "l5r4.ui.common.ok"}}
         </button>
       </div>
     </div>
@@ -71,7 +71,7 @@
       <div class="item">
         <span>{{localize "l5r4.character.experience.reason"}}</span>
         <span>{{localize "l5r4.character.experience.xpAmount"}}</span>
-        <span>{{localize "l5r4.character.experience.type"}}</span>
+        <span>{{localize "l5r4.ui.common.type"}}</span>
       </div>
     </section>
     <section class="item-list -xp-spent">
