--- a/templates/cards/advantage-disadvantage.hbs
+++ b/templates/cards/advantage-disadvantage.hbs
@@ -26,7 +26,7 @@
   {{/if}}
   {{#unless inSheet}}
     <p><strong>{{localize "l5r4.ui.common.type"}}:</strong> {{localize (concat "l5r4.character.advantages." system.type)}}</p>
-    <p><strong>{{localize "l5r4.equipment.general.cost"}}:</strong> {{system.cost}}</p>
+    <p><strong>{{localize "l5r4.ui.common.cost"}}:</strong> {{system.cost}}</p>
     {{#if system.specialRules}}
       <h5>{{localize "l5r4.ui.sheets.rulesSummary"}}</h5>
       <p>
