--- a/templates/cards/kata.hbs
+++ b/templates/cards/kata.hbs
@@ -9,7 +9,7 @@
     {{/if}}
   </h4>
   {{#if inSheet}}
-    <div>{{localize (concat "l5r4.mechanics.rings." system.ring)}}</div>
+    <div>{{localize (concat "l5r4.ui.mechanics.rings." system.ring)}}</div>
     <div>{{system.mastery}}</div>
     <span></span>
     {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
@@ -25,7 +25,7 @@
     {{/if}}
   {{/if}}
   {{#unless inSheet}}
-    <p><strong>{{localize "l5r4.ui.common.ring"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.ring)}}</p>
+    <p><strong>{{localize "l5r4.ui.common.ring"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.ring)}}</p>
     <p><strong>{{localize "l5r4.ui.common.mastery"}}:</strong> {{system.mastery}}</p>
     {{#if system.specialRules}}
       <h5>{{localize "l5r4.ui.sheets.rulesSummary"}}</h5>
