--- a/templates/cards/skill.hbs
+++ b/templates/cards/skill.hbs
@@ -18,7 +18,7 @@
         {{selectOptions @root.config.traits selected=system.trait localize=true}}
       </select>
     </div>
-    <div><a class="button" data-action="roll-skill" title="{{localize "l5r4.ui.rolls.skillRoll"}}">{{system.rollDice}}k{{system.rollKeep}}</a></div>
+    <div><a class="button" data-action="roll-skill" title="{{localize "l5r4.ui.mechanics.rolls.skillRoll"}}">{{system.rollDice}}k{{system.rollKeep}}</a></div>
     <div>{{system.emphasis}}</div>
     {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
     {{#if (or system.description system.specialRules)}}
@@ -33,7 +33,7 @@
     {{/if}}
   {{/if}}
   {{#unless inSheet}}
-    <p><strong>{{localize "l5r4.character.skills.properties.trait"}}:</strong> {{localize (concat "l5r4.mechanics.traits." system.trait)}}</p>
+    <p><strong>{{localize "l5r4.character.skills.properties.trait"}}:</strong> {{localize (concat "l5r4.ui.mechanics.traits." system.trait)}}</p>
     <p><strong>{{localize "l5r4.character.skills.properties.type"}}:</strong> {{localize (concat "l5r4.character.skillTypes." system.type)}}</p>
     {{#if system.specialRules}}
       <h5>{{localize "l5r4.ui.sheets.rulesSummary"}}</h5>
