--- a/templates/cards/technique.hbs
+++ b/templates/cards/technique.hbs
@@ -12,13 +12,13 @@
   </h4>
   {{#if inSheet}}
     {{#unless system.shugenja}}
-      <div><strong>{{localize "l5r4.character.skills.properties.rank"}}:</strong> {{system.rank}}</div>
+      <div><strong>{{localize "l5r4.ui.common.rank"}}:</strong> {{system.rank}}</div>
       <span></span>
       <span></span>
     {{/unless}}
     {{#if system.shugenja}}
-      <div><strong>{{localize "l5r4.magic.spells.affinity"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.affinity)}}</div>
-      <div><strong>{{localize "l5r4.magic.spells.deficiency"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.deficiency)}}</div>
+      <div><strong>{{localize "l5r4.magic.spells.affinity"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.affinity)}}</div>
+      <div><strong>{{localize "l5r4.magic.spells.deficiency"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.deficiency)}}</div>
       <span></span>
     {{/if}}
     {{> "systems/l5r4/templates/cards/_partials/_expand.hbs"}}
@@ -35,11 +35,11 @@
   {{/if}}
   {{#unless inSheet}}
     {{#unless system.shugenja}}
-      <p><strong>{{localize "l5r4.character.skills.properties.rank"}}:</strong> {{system.rank}}</p>
+      <p><strong>{{localize "l5r4.ui.common.rank"}}:</strong> {{system.rank}}</p>
     {{/unless}}
     {{#if system.shugenja}}
-      <p><strong>{{localize "l5r4.magic.spells.affinity"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.affinity)}}</p>
-      <p><strong>{{localize "l5r4.magic.spells.deficiency"}}:</strong> {{localize (concat "l5r4.mechanics.rings." system.deficiency)}}</p>
+      <p><strong>{{localize "l5r4.magic.spells.affinity"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.affinity)}}</p>
+      <p><strong>{{localize "l5r4.magic.spells.deficiency"}}:</strong> {{localize (concat "l5r4.ui.mechanics.rings." system.deficiency)}}</p>
     {{/if}}
     {{#if system.specialRules}}
       <h5>{{localize "l5r4.ui.sheets.rulesSummary"}}</h5>
