--- a/templates/chat/simple-roll.hbs
+++ b/templates/chat/simple-roll.hbs
@@ -14,7 +14,7 @@
   {{{roll}}}
   {{#if tnResult}}
     <div class="l5r4-tn-result">
-      {{tnResult.outcome}} {{localize "l5r4.mechanics.combat.targeting.vs"}} {{localize "l5r4.ui.common.tn"}} {{tnResult.effective}}
+      {{tnResult.outcome}} {{localize "l5r4.ui.mechanics.combat.targeting.vs"}} {{localize "l5r4.ui.common.tn"}} {{tnResult.effective}}
       {{#if tnResult.raises}} ({{localize "l5r4.magic.spells.raises"}}: {{tnResult.raises}}){{/if}}
     </div>
   {{/if}}
@@ -25,7 +25,7 @@
             data-weapon-name="{{weaponData.name}}"
             data-damage-roll="{{weaponData.damageRoll}}"
             data-damage-keep="{{weaponData.damageKeep}}">
-      {{localize "l5r4.mechanics.rolls.damageRoll"}} ({{weaponData.name}})
+      {{localize "l5r4.ui.mechanics.rolls.damageRoll"}} ({{weaponData.name}})
     </button>
   {{/if}}
 </div>
