--- a/templates/dialogs/create-equipment-dialog.hbs
+++ b/templates/dialogs/create-equipment-dialog.hbs
@@ -7,8 +7,7 @@
     <label>{{localize "l5r4.ui.common.type"}}</label>
     <select name="itemType">
       <option value="armor">{{localize "TYPES.Item.armor"}}</option>
-      <option value="bow">{{localize "l5r4.equipment.weapons.typeBow"}}</option>
-      <option value="item">{{localize "TYPES.Item.item"}}</option>
+      <option value="item">{{localize "TYPES.Item.commonItem"}}</option>
       <option value="weapon" selected="">{{localize "l5r4.equipment.weapons.typeWeapon"}}</option>
     </select>
   </div>
