--- a/templates/item/disadvantage.hbs
+++ b/templates/item/disadvantage.hbs
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label>{{localize "l5r4.equipment.general.cost"}}</label>
+    <label>{{localize "l5r4.ui.common.cost"}}</label>
     <div class="form-fields">
       <input name="system.cost" type="number" value="{{system.cost}}" data-type="Number" />
     </div>
