--- a/templates/item/skill.hbs
+++ b/templates/item/skill.hbs
@@ -1,6 +1,6 @@
 <section class="standard-form">
   <div class="form-group">
-    <label>{{localize "l5r4.character.skills.properties.rank"}}</label>
+    <label>{{localize "l5r4.ui.common.rank"}}</label>
     <div class="form-fields">
       <input name="system.rank" type="number" value="{{system.rank}}" data-type="Number" />
     </div>
@@ -13,7 +13,7 @@
   </div>
   {{#if system.school}}
   <div class="form-group">
-    <label>{{localize "l5r4.ui.common.free"}} {{localize "l5r4.character.skills.properties.rank"}}</label>
+    <label>{{localize "l5r4.ui.common.free"}} {{localize "l5r4.ui.common.rank"}}</label>
     <div class="form-fields">
       <input name="system.freeRanks" type="number" value="{{system.freeRanks}}" min="0" data-type="Number" />
     </div>
